@@ -316,9 +316,7 @@ sub new {
 }
 
 sub title {
-	my $self = shift;
-
-	return Wx::gettext('&View');
+	Wx::gettext('&View');
 }
 
 sub refresh {
